--- a/public/css/layout_login.css
+++ b/public/css/layout_login.css
@@ -52,12 +52,44 @@ body{
     height: 100vh;
     font-family: 'Poppins light';
     color: rgb(42, 42, 42);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+a{
+    text-decoration: none;
+}
+
+.login-container{
+    width: 70%;
+    height: 70%;
+    background-color: #ffffff;
+    box-shadow: 2px 2px 10px 3px rgb(216, 216, 216);
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    opacity: 0;
+    animation: fadeInSlide 0.8s ease-out forwards;
+    animation-delay: 0.2s;
+}
+
+
+@keyframes fadeInSlide {
+    from {
+        opacity: 0;
+        transform: translateY(40px);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
 }
 
 .banner{
     background-image: url('../img/banner_principal.png');
-    width:65%;
-    height: 100vh;
+    width: 65%;
+    height: 100%;
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -66,11 +98,11 @@ body{
     flex-direction: column;
     color: white;
     border-radius: 0px 400px 0px 0px;
-
+    border-radius: 10px;
 }
 
 .texto{
-    margin-left: 100px;
+    margin-left: 70px;
     font-family: 'Poppins semiBold';
 }
 
@@ -91,9 +123,9 @@ body{
     font-family: 'Poppins light';
 }
 
-.banner button{
-    padding: 10px 10px;
-    background-color: #ffffff00;
+.btn-banner{
+    padding: 10px 15px;
+    background-color: #ffffff26;
     border: 2px solid white;
     color: white;
     border-radius: 15px;
@@ -104,69 +136,218 @@ body{
     font-family: 'Poppins';
     margin-top: 15px;
     cursor: pointer;
+    width: 220px;
     transition: color 0.3s ease;
-   
 }
 
-.banner button:hover{
+.btn-banner:hover{
     background-color: #ffffff57
-
-}
-
-.main-content{
-    width: 35%;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
 }
 
 .form-container{
     display: flex;
-    /* position: absolute; */
-    align-items: center;
+    flex-direction: column;
+    width: 35%;
+    height: 100%;
+    /* justify-content: center; */
 }
+
+/* .logo{
+    display: flex;
+    justify-content: end;
+    align-items: end;
+    color: #01AC07;
+    font-size: 12px;
+    gap: 10px;
+    margin-right: 30px;
+    margin-top: 30px;
+    font-size: 10px;
+}
+
+.logo h2{
+    text-align: end;
+}
+
+.logo-sena{
+    width: 50px;
+    height: 50px;
+} */
+
+.form-container{
+    justify-content: center;
+}
+
+ .logo{
+    display: flex;
+    justify-content: start;
+    margin-left: 30px;
+    align-items: end;
+    color: #01AC07;
+    font-size: 12px;
+    gap: 10px;
+    margin-right: 30px;
+    font-size: 10px;
+}
+
+
 
 form{
     display: flex;
-    position: absolute;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    width: 300px;
     gap: 10px;
+    width: 300px;
+    height: auto;
+    border-radius: 10px;
+    margin-top: 30px;
 }
+
+.input-icon {
+  position: relative;
+  display: inline-block;
+  width: 200px;
+}
+
+.input-icon select {
+  width: 100%;
+  padding: 10px 40px 10px 10px; /* Deja espacio para el ícono */
+  appearance: none;
+}
+
+.input-icon .icon {
+  position: absolute;
+  right: 10px;
+  top: 50%;
+  transform: translateY(-50%);
+  pointer-events: none; /* El ícono no bloquea el click */
+  font-size: 14px;
+}
+
+
+.content{
+    display: flex;
+    align-items: center;
+    position: relative;
+}
+
+.content i{
+    position: absolute;
+    left: 3.5%;
+    bottom: 5%;
+}
+
+.content i img{
+    width: 19px;
+    height: 19px;
+    opacity: 10;
+}
+
 
 input, select{
     background-color: #ffffff00;
-    border-radius: 10px;
-    border: 2px solid #A8A8A8;
-    width: 300px;
-    padding: 10px;
+    border-radius: 20px;
+    border: 1px solid #a1a1a1;
+    width: 350px;
+    padding: 10px 40px 10px 10px;
+    font-family: 'Poppins light';
+}
+
+input, select{
+    padding: 10px 10px 10px 37px;
+}
+
+input:focus, select:focus{
+    outline-color: rgb(97, 161, 97);
+    outline-style: groove;
 }
 
 select{
-    color: #797979;
-    padding: 10px 10px 10px 10px;
+    color: #a1a1a1;
+    appearance: none;
+    cursor: pointer;
+    background: url('../icons/flecha-select.png') no-repeat right 13px center;
+    background-size: 15px; /* Tamaño de la flecha */
+}
+
+option{
+    border-radius: 20px;
+
+}
+
+option:disabled{
+    background-color: rgb(233, 233, 233);
 }
 
 form button{
-    width: 300px;
-    padding: 10px;
+    width: 350px;
+    padding: 7px;
     border: none;
-    border-radius: 10px;
+    border-radius: 20px;
     background-color: #39A900;
     color: white;
     font-family: 'Poppins';
     font-size: 17px;
     cursor: pointer;
+    /* margin-top: 10px; */
 }
 
 input::placeholder, select{
     font-size: 15px;
+    color: #a7a7a7;
 }
 
 
 form button:hover{
     background-color: #318606;
+}
+
+
+
+hr{
+    width: 200px;
+    height: 1px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    background-color: rgb(227, 227, 227);
+}
+
+.font-small{
+    font-size: 13px;
+}
+
+.password-config{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 350px;
+    padding: 10px;
+}
+
+.password-config a{
+    color: #2f7a00;
+}
+
+.remember{
+    display: flex;
+    width: 90px;
+    gap:5px;
+}
+
+.remember input[type='checkbox']{
+  accent-color: #01AC07; /* changes checkbox color in modern browsers */
+  cursor: pointer;
+  width: 13px;
+}
+
+.remember input[type='checkbox']:focus{
+    outline: none
+}
+
+.color-green{
+    color: #2f7a00;
+}
+
+.color-green:hover{
+    color: #3bc33f;
 }
