--- a/public/css/pages/competencies_program_index.css
+++ b/public/css/pages/competencies_program_index.css
@@ -31,16 +31,20 @@
 
 body {
     font-family: 'Segoe UI', sans-serif;
-    background-color: var(--gris-fondo);
+    background: linear-gradient(130deg, #103E19 2%, #1c2628 30%, #1c2628 50%, #1c2628 100%);
     color: var(--gris-texto);
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;   /* Elimina el scroll global */
 }
 
 /*===============================
   HEADER
 ===============================*/
 .header {
-    background-color: #f8f8f8;
-    color: var(--verde-header);
+    background-color: #1c2628;
+    color: white;
     padding: 15px 30px;
     display: flex;
     justify-content: space-between;
@@ -50,7 +54,8 @@ body {
     position: sticky;
     top: 0;
     z-index: 1000;
-    border-radius: 10px;
+    border-radius: 20px;
+    margin-bottom: 20px;
 }
 
 .header-container {
@@ -59,20 +64,31 @@ body {
     flex-grow: 1;
 }
 
+.dashboard-header h1 {
+    color: #dddddd;
+    font-size: 28px;
+    margin-bottom: 10px;
+}
+
+.dashboard-header p {
+    color: #cfcfcf;
+    font-size: 16px;
+    opacity: 0.8;
+}
+
 .logo {
     display: flex;
     align-items: center;
     flex-grow: 1;
-    gap: 10px;
+    gap: 15px;
     width: 100%;
     padding: 10px 10px 20px;
     margin-bottom: 50px;
     border-bottom: 1px solid rgb(182, 181, 181);
+    font-weight: 100;
 }
 
 .contenedor-verde-logo {
-    background-color: #39A900;
-    padding: 7px;
     border-radius: 10px;
     display: flex;
     justify-content: center;
@@ -88,7 +104,7 @@ body {
     font-size: 15px;
     font-weight: bold;
     letter-spacing: 0.5px;
-    color: rgb(87, 86, 86);
+    color: #dddddd;
     line-height: 1.6;
 }
 
@@ -104,7 +120,9 @@ body {
 ===============================*/
 .main-layout {
     display: flex;
-    min-height: calc(100vh - 120px);
+    height: 100vh;    /* Asegura que ocupe toda la altura de la pantalla */
+    overflow: hidden;  /* Evita el scroll global */
+    padding: 10px;
 }
 
 /*===============================
@@ -112,18 +130,19 @@ body {
 ===============================*/
 .sidebar {
     width: 300px;
-    background-color: #f8f8f8;
+    background-color: rgba(255, 255, 255, 0);
     padding: 10px 20px 20px 10px;
     transition: var(--transicion);
     overflow-y: auto;
     overflow-x: hidden;
     position: relative;
     z-index: 900;
-    height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
+    height: 100vh;
+    flex: 0 0 auto;
 }
 
 .sidebar-toggle {
@@ -191,7 +210,7 @@ body {
 
 .sidebar-menu>li>a.menu-toggle {
     text-decoration: none;
-    color: var(--gris-texto);
+    color: #dddddd;
     font-weight: 600;
     display: flex;
     justify-content: space-between;
@@ -213,7 +232,7 @@ body {
 
 .icon-sidebar {
     width: 20px;
-    
+
 }
 
 
@@ -225,8 +244,8 @@ body {
     width: 20px;
     margin-right: 5px;
     text-align: center;
-    color: #34343c;
-} 
+    color: #dddddd;
+}
 
 .sidebar-menu li ul {
     list-style: none;
@@ -246,7 +265,7 @@ body {
     align-items: center;
     gap: 5px;
     text-decoration: none;
-    color: var(--gris-texto);
+    color: #c7c7c7;
     padding: 10px 15px;
     font-size: 14px;
     border-radius: var(--radius);
@@ -260,7 +279,7 @@ body {
     content: '';
     width: 6px;
     height: 6px;
-    background: #34343c;
+    background: #ffffff;
     border-radius: 50%;
     margin-right: 10px;
     opacity: 0.6;
@@ -269,7 +288,7 @@ body {
 
 .sidebar-menu li ul li a:hover {
     background-color: rgba(57, 169, 0, 0.1);
-    color: var(--verde-header-hover);
+    color: white;
     padding-left: 20px;
 }
 
@@ -279,8 +298,8 @@ body {
 }
 
 .sidebar-menu li ul li a.active-link {
-    background-color: #39a90026;
-    color: var(--verde-header-hover);
+    background-color: #c5c5c513;
+    color: #dddddd;
     font-weight: 600;
 }
 
@@ -289,9 +308,19 @@ body {
 ===============================*/
 .content {
     flex-grow: 1;
-    padding: 25px;
     background-color: white;
     transition: var(--transicion);
+    border-radius: 20px;
+    padding: 10px;
+    flex-grow: 1;                /* Ocupa el espacio restante después del sidebar */
+    background-color: white;
+    height: auto;         /* Margen alrededor del contenido */
+    border-radius: 20px;
+}
+
+#main-content{
+    overflow-y: auto;
+    flex: 1 1 auto;
 }
 
 /* .content.expanded {
@@ -327,17 +356,6 @@ body {
     margin-bottom: 20px;
 }
 
-.dashboard-header h1 {
-    color: #39393e;
-    font-size: 28px;
-    margin-bottom: 10px;
-}
-
-.dashboard-header p {
-    color: var(--gris-texto);
-    font-size: 16px;
-    opacity: 0.8;
-}
 
 /* Tarjetas de estadísticas */
 .stats-grid {
@@ -458,63 +476,63 @@ body {
     height: 12px;
 }
 
-.border-orange{
+.border-orange {
     border-top: 5px solid #c77c1b;
 }
 
-.orange-icon-container i{
-    background-color: #fbf6ee; 
+.orange-icon-container i {
+    background-color: #fbf6ee;
     color: #c77c1b;
 }
 
-.orange{
+.orange {
     background: linear-gradient(180deg, transparent 0%, #ffebd0 100%);
     background-image: url('data:image/svg+xml;utf8,<svg width="300" height="60" viewBox="0 0 300 60" xmlns="http://www.w3.org/2000/svg"><path d="M0,30 C40,10 80,50 120,30 C160,10 200,50 240,35 C280,20 300,15 300,15 L300,60 L0,60 Z" fill="%23ff9900" fill-opacity="0.1"/></svg>');
     background-size: cover;
     background-repeat: no-repeat;
 }
 
-.orange-trend{
+.orange-trend {
     color: #c77c1b;
 }
 
-.border-green{
+.border-green {
     border-top: 5px solid #39A900;
 }
 
-.green-icon-container i{
+.green-icon-container i {
     color: #39A900;
     background-color: #eefbee;
 }
 
-.green-wave{
+.green-wave {
     background: linear-gradient(180deg, transparent 0%, #d2ffd0 100%);
     background-image: url('data:image/svg+xml;utf8,<svg width="300" height="60" viewBox="0 0 300 60" xmlns="http://www.w3.org/2000/svg"><path d="M0,30 C40,10 80,50 120,30 C160,10 200,50 240,35 C280,20 300,15 300,15 L300,60 L0,60 Z" fill="%2339A900" fill-opacity="0.1"/></svg>');
     background-size: cover;
     background-repeat: no-repeat;
 }
 
-.green-trend{
+.green-trend {
     color: #39A900;
 }
 
-.red-border{
+.red-border {
     border-top: 5px solid #9249c6;
 }
 
-.red-icon-container i{
+.red-icon-container i {
     color: #9249c6;
     background-color: #f6eefb;
 }
 
-.red{
+.red {
     background: linear-gradient(180deg, transparent 0%, #ffd0d0 100%);
     background-image: url('data:image/svg+xml;utf8,<svg width="300" height="60" viewBox="0 0 300 60" xmlns="http://www.w3.org/2000/svg"><path d="M0,30 C40,10 80,50 120,30 C160,10 200,50 240,35 C280,20 300,15 300,15 L300,60 L0,60 Z" fill="%239249c6" fill-opacity="0.1"/></svg>');
     background-size: cover;
     background-repeat: no-repeat;
 }
 
-.red-trend{
+.red-trend {
     color: #9249c6;
 }
 
@@ -987,11 +1005,11 @@ body {
     justify-content: center;
     align-items: center;
     gap: 10px;
-    color: #348ac7;
+    color: #ffffff;
     padding: 10px 10px 10px 14px;
     border-radius: 100px;
     font-weight: 600;
-    background-color: rgba(46, 95, 148, 0.172)
+    background-color: rgba(255, 255, 255, 0.172)
 }
 
 .usuario-info {
@@ -1000,11 +1018,13 @@ body {
 
 .usuario-info i {
     font-size: 30px;
-    color: #348ac7;
+    color: #ffffff;
 }
 
 .usuario-info:hover {
-    border: 1px solid #2e5f9484;
+    background: #348ac7;
+    color: white;
+    border: 2px solid #47a4e6;
 }
 
 .notificaciones i,
@@ -1039,7 +1059,7 @@ form.logout-form {
     width: 100%;
 }
 
-.logout-button img{
+.logout-button img {
     width: 20px;
 }
 
