--- a/public/css/pages/competencies_program_index.css
+++ b/public/css/pages/competencies_program_index.css
@@ -133,6 +133,7 @@ body {
     font-weight: 500;
     font-size: 19px;
     color: rgb(107, 107, 107);
+    gap: 5px;
 }
 
 .small-text{
@@ -147,13 +148,11 @@ body {
 ===============================*/
 .sidebar {
     width: 300px;
-    background-color: rgba(255, 255, 255, 0);
+    background-color: #ffffff00;
     padding: 10px 20px 20px 10px;
     transition: var(--transicion);
-    overflow-y: auto;
-    overflow-x: hidden;
     position: relative;
-    z-index: 1; 
+    z-index: 10005; 
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -164,9 +163,7 @@ body {
 }
 
 .sidebar-toggle {
-    position: absolute;
     top: 0.3%;
-    right: 82.7%;
     background: var(--verde-sena);
     width: 48px;
     height: 48px;
@@ -176,8 +173,16 @@ body {
     justify-content: center;
     cursor: pointer;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-    z-index: 950;
     transition: var(--transicion);
+    position: fixed;
+    left: calc( var(--sidebar-width) - 20px );
+    /* z-index: 10000; */
+}
+
+
+.sidebar-toggle img{
+    width: 10px;
+        
 }
 
 .sidebar-toggle:hover {
@@ -219,25 +224,25 @@ body {
 }
 
 .sidebar.collapsed .sidebar-toggle{
-    margin-left: -10px;
+    left: 4%;
 }
 
-/* .sidebar.collapsed .sidebar-menu>li>a.menu-toggle::after {
-    display: none;
-} */
+.sidebar.collapsed .sidebar-toggle img{
+    transform: rotate(180deg);
+}
 
 .sidebar.collapsed .sidebar-menu ul {
     position: absolute;
-    left: 90px;
+    left: 83px;
     top: 0;
     background: var(--verde-sidebar-bg);
     border-radius: 0 var(--radius) var(--radius) 0;
     box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.1);
     padding: 20px;
     display: none !important;
-    background-color: green;
-    z-index: 1000;
-    width: 100px !important;
+    background-color: #051418;
+    z-index: 1500;
+    width: 200px !important;
 }
 
 .sidebar.collapsed .sidebar-menu li:hover>ul {
@@ -304,7 +309,6 @@ body {
 
 .sidebar-menu li ul.show {
     max-height: 500px;
-    /* width: 600px; */
     margin-bottom: 8px;
 }
 
@@ -729,20 +733,20 @@ body {
 
 .action-btn:hover {
     transform: translateY(-3px);
-    color: var(--verde-sena);
+    color: #39a9001a;
     border: 2px solid var(--verde-sena);
     
 }
 
-.action-icon:hover{
-    background: var(--verde-sena);
+.action-btn:hover .action-icon {
+    background: #38a90067;
     color: white;
 }
 
 .action-icon {
     width: 80px;
     height: 80px;
-    background: rgba(57, 169, 0, 0.1);
+    background: #39a9001a;
     border-radius: 35px 0px 0px 35px;
     display: flex;
     align-items: center;
@@ -1178,8 +1182,45 @@ form.logout-form {
     width: 100%;
     border-radius: 10px;
     justify-content: center;
-    padding: 20px;
+    padding: 20px 15px 20px 15px;
 }
+
+.banner-noticias a{
+    text-decoration: none;
+}
+
+
+.noticia{
+    display: flex;
+    gap: 15px;
+    align-items: center;
+    border-top: 1px solid rgb(221, 221, 221);
+    padding: 15px 0px;
+}
+
+.noticia:hover{
+    background-color: rgb(240, 240, 240);
+    border-radius: 10px;
+    padding: 15px;
+    transition: var(--transicion);
+}
+
+
+.noticia p{
+    text-decoration: none;
+    color: rgb(151, 151, 151);
+    font-weight: 400;
+    font-size: 14px;
+    width: 100%;
+}
+
+.imagen-noticia{
+    width: 63px;
+    height: 63px;
+    border-radius: 10px;
+}
+
+
 
 .title{
     padding: 10px;
