--- a/public/css/pages/competencies_program_index.css
+++ b/public/css/pages/competencies_program_index.css
@@ -1,4 +1,4 @@
-/*===============================
+/* ===============================
   VARIABLES ROOT
 ===============================*/
 :root {
@@ -36,6 +36,7 @@ body {
     /* background-color: #0F0F0F; */
     color: var(--gris-texto);
     height: 100%;
+    max-width: 100vw;
     margin: 0;
     padding: 0;
     overflow: hidden;   /* Elimina el scroll global */
@@ -57,6 +58,8 @@ body {
     z-index: 900;
     margin-bottom: 20px;
     border-bottom: 1px solid rgb(224, 224, 224);
+    background-color: #f0f0f0;
+    margin-top: 20px;
 }
 
 .header-container {
@@ -190,66 +193,6 @@ body {
     transform: scale(1.05);
 }
 
-.sidebar.collapsed {
-    width: 190px;
-    border-right: none; 
-    padding: 0px;
-    margin: 0;
-}
-
-
-.sidebar.collapsed .icon-sidebar, 
-.sidebar.collapsed .lgout, 
-.sidebar.collapsed .texto-header,
-.sidebar.collapsed .menu-text
-{
-    display: none;
-}
-
-.sidebar.collapsed .logout-button {
-    margin-left: 10px;
-    width: 50px;
-}
-
-.sidebar.collapsed .sidebar-menu li{
-    width: 10px;
-}
-
-.sidebar.collapsed .sidebar-menu > li > a.menu-toggle{
-    width: 70px;
-}
-
-.sidebar.collapsed .logo{
-    border-bottom: none;
-}
-
-.sidebar.collapsed .sidebar-toggle{
-    left: 4%;
-}
-
-.sidebar.collapsed .sidebar-toggle img{
-    transform: rotate(180deg);
-}
-
-.sidebar.collapsed .sidebar-menu ul {
-    position: absolute;
-    left: 83px;
-    top: 0;
-    background: var(--verde-sidebar-bg);
-    border-radius: 0 var(--radius) var(--radius) 0;
-    box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.1);
-    padding: 20px;
-    display: none !important;
-    background-color: #051418;
-    z-index: 1500;
-    width: 200px !important;
-}
-
-.sidebar.collapsed .sidebar-menu li:hover>ul {
-    display: block !important;
-}
-
-
 .sidebar-menu {
     list-style: none;
     padding: 0;
@@ -307,6 +250,7 @@ body {
     transition: max-height 0.4s ease, padding 0.3s ease;
 }
 
+
 .sidebar-menu li ul.show {
     max-height: 500px;
     margin-bottom: 8px;
@@ -355,6 +299,83 @@ body {
     font-weight: 600;
 }
 
+.sidebar.collapsed {
+    width: 190px;
+    border-right: none; 
+    padding: 0px;
+    margin: 0;
+}
+
+.sidebar.collapsed .icon-sidebar, 
+.sidebar.collapsed .lgout, 
+.sidebar.collapsed .texto-header,
+.sidebar.collapsed .menu-text
+{
+    display: none;
+}
+
+.sidebar.collapsed .logout-button {
+    margin-left: 10px;
+    width: 50px;
+}
+
+.sidebar.collapsed .sidebar-menu li{
+    width: 10px;
+}
+
+.sidebar.collapsed .sidebar-menu > li > a.menu-toggle{
+    width: 70px;
+}
+
+.sidebar.collapsed .logo{
+    border-bottom: none;
+}
+
+.sidebar.collapsed .sidebar-toggle{
+    left: 4%;
+}
+
+.sidebar.collapsed .sidebar-toggle img{
+    transform: rotate(180deg);
+}
+
+.sidebar.collapsed .sidebar-menu ul {
+    position: absolute;
+    left: 70px;
+    top: 0;
+    background: var(--verde-sidebar-bg);
+    border-radius: 0 var(--radius) var(--radius) 0;
+    box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+    display: none !important;
+    background-color: #051418;
+    z-index: 1500;
+    width: 200px !important;
+}
+
+.sidebar.collapsed .sidebar-menu li:hover>ul {
+    display: block !important;
+}
+
+.sidebar.collapsed .sidebar-menu li ul li a:hover{
+    background-color: rgba(255, 255, 255, 0.158);
+    width: 100%;
+}
+
+.sidebar.collapsed .sidebar-menu li ul li a.active-link {
+    width: 150px;
+}
+
+.sidebar.collapsed .sidebar-menu li ul li a:hover {
+    width: 150px;
+}
+
+.sidebar.collapsed .sidebar-menu li ul{
+    max-height: none;
+}
+
+
+
 /*===============================
   CONTENT
 ===============================*/
@@ -363,22 +384,23 @@ body {
     background-color: #f0f0f0;
     transition: var(--transicion);
     border-radius: 0px 20px 20px 0px;
-    padding: 15px;
+    padding: 0px 15px 15px 15px;
     flex-grow: 1;                
     height: auto;  
-    /* border-radius: 20px;     */
+    max-width: 100%;
+    overflow-y: auto;
 
 }
 
 .flex{
     display: flex;
     gap: 20px;
+    max-width: 100%;
 }
 
 
 #main-content{
-    overflow-y: auto;
-    flex: 1 1 auto;
+    flex-wrap: wrap;
     
 }
 
@@ -411,35 +433,40 @@ body {
     margin: 0;
 }
 
+.left-content {
+    width: 77%;
+}
+
 
 /* Tarjetas de estadísticas */
 .contenedor-cards {
     padding: 20px;
     background-color: white;
     border-radius: 10px;
-    width: 1170px;
+    width: 100%;
     box-shadow: 5px 5px 15px 5px rgb(230, 230, 230);
+    flex-wrap: wrap;
 }
 
 .stats-grid {
-    display: inline-grid;
-    grid-template-columns: repeat(4, 290px);
+    display: flex;
+    gap: 20px;
+    flex-wrap: wrap;
+    width: 100%;
 }
 
 .stat-card {
-    width: 260px;
-    height: auto;
+    flex: 1 1 calc(25% - 25px);
+    min-width: 14%;
+    min-height: 5%;
     padding: 20px 20px 60px;
-    /* espacio para la ola */
     border-radius: 16px;
     box-shadow: 0 4px 20px rgba(0, 0, 0, 0.05);
     display: flex;
     position: relative;
-    font-family: 'Inter', sans-serif;
     flex-direction: row;
     align-items: center;
     transition: all 0.3s ease;
-    border-top: none;
     overflow: hidden;
     background: rgba(255, 255, 255, 0.6);
     backdrop-filter: blur(12px);
@@ -517,6 +544,8 @@ body {
 .stat-label {
     font-size: 14px;
     color: #718096;
+    text-align: end;
+    width: 100%;
 }
 
 .stat-trend {
@@ -699,9 +728,10 @@ body {
 .quick-actions {
     margin-top: 30px;
     background-color: white;
-    width: 1170px;
+    width: auto;
     border-radius: 10px;
     padding: 20px;
+    flex-wrap: wrap;
 }
 
 .quick-actions h2 {
@@ -711,12 +741,15 @@ body {
 }
 
 .action-grid {
-    display: grid;
-    grid-template-columns: repeat(4, 270px);
+    display: flex;
     gap: 15px;
+    width: 100%;
+    flex-wrap: wrap;
 }
 
 .action-btn {
+    flex: 1 1 calc(25% - 15px);
+    min-width: 250px;
     display: flex;
     flex-direction: row;
     gap: 15px;
@@ -724,11 +757,12 @@ body {
     border-radius: 35px 10px 10px 35px;
     text-decoration: none;
     box-shadow: 3px 3px 10px #b3b3b333;
-    transition: var(--transicion);
+    transition: all 0.3s ease;
     text-align: center;
     border: 2px solid rgb(204, 204, 204);
     height: 80px;
     padding: 0px 10px 0px 0px;
+    background-color: white;
 }
 
 .action-btn:hover {
@@ -1179,16 +1213,20 @@ form.logout-form {
     display: flex;
     gap: 15px;
     background-color: white;
-    width: 100%;
     border-radius: 10px;
     justify-content: center;
     padding: 20px 15px 20px 15px;
+    width: 21%;
+    height: 100%;
+}
+
+.banner-noticias{
+    width: 100%;
 }
 
 .banner-noticias a{
     text-decoration: none;
 }
-
 
 .noticia{
     display: flex;
