--- a/public/css/pages/programming_dashboard.css
+++ b/public/css/pages/programming_dashboard.css
@@ -4,6 +4,10 @@
     padding: 0;
 }
 
+body{
+    font-family: 'Segoe UI', sans-serif;;
+}
+
 .main-layout {
     display: flex;
     gap: 0px !important;
@@ -32,31 +36,22 @@
 }
 
 .page-title {
-    font-size: 32px;
-    margin-bottom: 15px;
-    color: #28a745;
-    font-weight: 700;
-    text-align: center;
+    margin-bottom: 10px;
+    font-weight: 500;
     padding-bottom: 15px;
-    border-bottom: 2px solid #eaeaea;
+    border-bottom: 1px solid #eaeaea;
 }
 
 .page-description {
-    text-align: center;
-    color: #000;
-    margin-bottom: 30px;
+    color: #2b2b2b;
     font-size: 16px;
-    max-width: 900px;
-    margin-left: auto;
-    margin-right: auto;
-    line-height: 1.5;
 }
 
 /* Botones */
 .btn-primary {
-    background-color: #28a745;
+    background-color: var(--verde-sena);
     color: white;
-    padding: 14px 30px;
+    padding: 10px 15px;
     border: none;
     border-radius: 8px;
     font-weight: 600;
@@ -64,14 +59,14 @@
     transition: all 0.3s ease;
     display: inline-flex;
     align-items: center;
-    gap: 10px;
-    font-size: 16px;
-    margin-bottom: 25px;
+    gap: 5px;
+    font-size: 15px;
+    margin-bottom: 10px;
     text-decoration: none;
 }
 
 .btn-primary:hover {
-    background-color: #218838;
+    background-color: #1a8d10;
     transform: translateY(-2px);
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
@@ -98,6 +93,7 @@ thead th {
     font-weight: 700;
     padding: 15px;
     text-align: left;
+    padding-left: 30px;
     border-bottom: 2px solid #dee2e6;
     position: sticky;
     top: 0;
@@ -106,7 +102,7 @@ thead th {
 }
 
 tbody td {
-    padding: 12px 15px;
+    padding: 12px 30px;
     border-bottom: 1px solid #e2e8f0;
 }
 
@@ -133,14 +129,14 @@ table tr:last-child td {
 }
 
 .badge-technologist {
-    background-color: #e6f7ee;
-    color: #0b8c56;
+    background-color: #0b8c0b1f;
+    color: #0b8c0b;
 }
 
 /* Alertas */
 .alert-success {
     background-color: #d4edda;
-    color: #155724;
+    color: #571515;
     padding: 15px 20px;
     margin-bottom: 25px;
     border-radius: 8px;
@@ -267,17 +263,6 @@ table tr:last-child td {
     margin-bottom: 20px;
 }
 
-.dashboard-header h1 {
-    color: var(--verde-sena);
-    font-size: 28px;
-    margin-bottom: 10px;
-}
-
-.dashboard-header p {
-    color: var(--gris-texto);
-    font-size: 16px;
-    opacity: 0.8;
-}
 
 .form-actions {
     display: flex;
